src/objects/Expense_Tax__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Tax_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Tax Type</label>
        <referenceTo>Expense_Tax_Type__c</referenceTo>
        <relationshipLabel>Expense Taxes</relationshipLabel>
        <relationshipName>Expense_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Taxes</relationshipLabel>
        <relationshipName>Expense_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Tax</label>
    <nameField>
        <label>Expense Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Taxes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>